<resources>
    <string name="app_name">Ummo</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_confirm_location">ConfirmLocation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">You email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Map</string>
    <string name="ummo_logo_text">Ummo Logo</string>
    <string name="next_registration_button">Next</string>
    <string name="email_prompt">What\'s your email?</string>
    <string name="email_prompt2">Your email will be used for User Support purposes only.</string>
    <string name="enter_email">Email address</string>
    <string name="sign_up_button">Sign-Up</string>
    <string name="search_location_string">Search location</string>
    <string name="name_prompt_hint">Full name</string>
    <string name="contact_prompt_hint">Mobile contact</string>
    <string name="ummo_logo_descriptor">Ummo Logo</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_agent_request">AgentRequest</string>
    <string name="nearest_agent_string">Nearest Agent</string>
    <string name="loading_agent_message">Finding you the nearest agent…</string>
    <string name="confirm_agent_string">Confirm Agent</string>
    <string name="get_another_string">Request Another</string>
    <string name="agent_charge_tip">Hourly rate: R25.00 + R2.50</string>
    <string name="title_activity_delegation_chat">DelegationChat</string>
    <string name="confirm_service_string">Confirm service initiation</string>
    <string name="initiation_chat_string">Service initiation chat</string>
    <string name="first_line_string">Use this chat to initiate the service with your agent.</string>
    <string name="second_line_string">Note:</string>
    <string name="third_line_string">-meet agent at a public place</string>
    <string name="fourth_line_string">-only share certified copies of your docs</string>
    <string name="fifth_line_string">billing will start once you confirm "Service Initiation"</string>
    <string name="follow_up_agent_string">Start chatting with your agent to meet</string>
    <string name="type_message_hint"><font size="18">Chat with agent</font></string>
    <string name="title_activity_delegation_progress">DelegationProgress</string>
    <string name="track_progress_string">Track Service Progress</string>
    <string name="progress_string">Service Progress</string>
    <string name="progress_info_title">Service Progress Info</string>
    <string name="progress_first_line">Your agent will keep you up-to-date om the progress of your service in the real-time.</string>
    <string name="progress_second_line">To know more about the status of your service, use the chat feature above.</string>
    <string name="progress_third_line">If there are any issues, you will be notified.</string>
    <string name="form_filled_string">Form Filled</string>
    <string name="service_payment_string">Service Payment</string>
    <string name="collection_string">Collection</string>
    <string name="service_complete_string">Your agent has completed the service. Tap on ACCEPT to confirm receipt of your product \n\nPayment will be automatic</string>
    <string name="service_complete_title_string">Service Complete</string>
    <string name="full_name_title_string">Full Name</string>
    <string name="surname_title_string">Surname</string>
    <string name="contact_title_string">Phone Number</string>
    <string name="rating_title_string">Rating</string>
    <string name="id_number_title_string">ID Number</string>
    <string name="email_title_string">Email Address</string>
    <string name="title_activity_edit_my_profile">EditMyProfile</string>
    <string name="payment_method_title_string">Payment Methods</string>
    <string name="add_payment_method_string">Add payment method</string>
    <string name="title_activity_add_payment_method">AddPaymentMethod</string>
    <string name="title_activity_add_card">AddCard</string>
    <string name="card_number_hint_string"><font size="18">Card Number</font></string>
    <string name="date_hint_string"><font size="18">MM/YY</font></string>
    <string name="cvv_hint_string"><font size="18">CVV</font></string>
    <string name="country_title_string">Country</string>
    <string name="post_code_hint_string"><font size="18">Postcode</font></string>
    <string name="button_next_string">Next</string>
    <string name="sliding_drawer_ok_btn_string">Ok</string>
    <string name="title_activity_all_services">AllServices</string>
    <string name="processes_string">Processes: </string>
    <string name="documents_string">Documents: </string>
    <string name="cost_string">Cost: </string>
    <string name="duration_string">Duration: </string>
    <string name="more_string">more</string>
    <string name="title_activity_detailed_service">Service Details</string>
    <string name="service_description_title">Description</string>
    <string name="service_documents_title_string">Documents</string>
    <string name="service_cost_title_string">Cost</string>
    <string name="service_duration_title">Duration</string>
    <string name="service_processes_title">Steps to follow</string>
    <string name="cost">R10.00</string>
    <string name="service_docs">-Birth Certificate \n-National ID \n-And more</string>
    <string name="duration">0800h - 1500h </string>
    <string name="next">Next</string>
    <string name="skip">Back</string>
    <string name="start">Done</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="sentryDsn">https://c46e9ae28cb847e7ab39746902f6c29a@sentry.io/1485110</string>
    <string name="passcode_screen_title_string">Verify phone number</string>
    <string name="code_prompt_text">Enter the 6 digit code sent to you at %1$s</string>
    <string name="passcode_prompt_string">Enter the 6 digit code which we have just sent to the phone number you registered with.</string>
    <string name="resend_btn_string">Resend Code</string>
    <string name="already_have_an_account_log_in">Already have an account? Log-in here</string>
    <string name="verifyUserInfo">Unverified Account (tap to verify)</string>
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="code_prompt_title">Let\'s verify your phone</string>
    <string name="resend_code">Resend code in: </string>
    <string name="description_default_string">Default Product Description</string>
    <string name="no_delegated_service">You have not delegated a service yet…</string>
    <string name="nav_drawer_delegated_service">Delegated Service</string>
    <string name="nav_drawer_service_history">Service History</string>
    <string name="nav_drawer_payment_methods">Payment Methods</string>
    <string name="nav_drawer_my_profile">My Profile</string>
    <string name="nav_drawer_home">Home</string>
    <string name="home_nav_title">Home</string>
    <string name="request_agent_title">Get agent</string>
    <string name="chats_title">Chats</string>
    <string name="retry_button_string">Retry</string>
    <string name="return_button_string">Return</string>
    <string name="mixpanelToken">d787d12259b1db03ada420ec6bb9e5af</string>
    <string name="onesignal_app_id">ef592931-49e1-40f6-bdb1-9f0e08eb6f9a</string>
    <string name="retry_agent_request">RETRY AGENT REQUEST</string>
    <string name="profile_nav_title">Profile</string>
    <string name="service_nav_title">Bookmarks</string>
    <string name="save_service">Save Service</string>
    <string name="service_centre_image">Service Centre Image</string>
    <string name="product_requirements">What you will need:</string>
    <string name="service_cost">Service will cost:</string>
    <string name="delegation_description">Get an agent to renew your motor-vehicle licence</string>
    <string name="request_ummo_agent">Request an Ummo Agent for %1$s</string>
    <string name="product_cost">Total (including Assistance Fee)</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="info_image">Info Image</string>
    <string name="info_body_text">This is an example tip that will be shown to users when they use the app. It will be used to share important info for the user.</string>
    <string name="dismiss_info">Dismiss Info</string>
    <string name="feedback">Feedback</string>
    <string name="request_message">Just a second…</string>
    <string name="request_error_image_description">Request Error</string>
    <string name="call_for_bug_assistance">Please try again, or help us fix it by reporting the issue in Feedback.</string>
    <string name="registration_continue">Continue</string>
    <string name="service_name">Service Name</string>
    <string name="service_description">Service Description</string>
    <string name="service_eligibility">This service is for:</string>
    <string name="service_eligibility_placeholder">Who is eligible to receive this service?</string>
    <string name="service_centres">Service found at</string>
    <string name="service_centre_placeholder">Service Centre</string>
    <string name="service_cost_string">Service Cost</string>
    <string name="service_cost_placeholder">Free</string>
    <string name="service_duration">Service Duration</string>
    <string name="service_duration_placeholder">Service Duration</string>
    <string name="service_requirements">Service Requirements</string>
    <string name="service_requirements_placeholder">Requirements</string>
    <string name="disapproval_placeholder">2</string>
    <string name="approval_placeholder">2</string>
    <string name="comments_placeholder">2 comments</string>
    <string name="shares_placeholder">2 shares</string>
    <string name="more_info">MORE INFO</string>
    <string name="you_upvoted_this">You upvoted</string>
    <string name="you_downvoted_this">You downvoted</string>
    <string name="you_commented_on_this">You commented</string>
    <string name="you_shared_this">You shared</string>
    <string name="you_saved_this">Saved Offline</string>
    <string name="anonymous_comment">Don\'t share my info (anonymous comment)</string>
    <string name="recommend_service_improvements">How would you improve this service?</string>
    <string name="service_centre_selection">(Choose one closest to you)</string>
    <string name="request_agent_text">Request Agent</string>
    <string name="service_updated">Service Updated…</string>
    <string name="service_authenticity">Service Authenticity</string>
    <string name="verified_by">Sourced from: </string>
    <string name="service_verifier">Ministry of Public Service</string>
    <string name="service_tips">Service Tips</string>
    <string name="safety_net_api_key">AIzaSyBzqqPTLxlo6__Ow-mtgb8U9e77VNjLdDU</string>
    <string name="safety_net_recaptcha_key">6Ldc8ikaAAAAAIYNDzByhh1V7NWcAOZz-ozv-Tno</string>
    <string name="serverUrl">https://ummo-api.herokuapp.com</string>
    <string name="delegation_fee">E50</string>
    <string name="intro_header_text"><![CDATA[Thank you for helping improve Ummo.]]></string>
    <string name="bug_bounty">We\'ve worked hard to squash all bugs, but if you meet any survivors, please let us know.</string>
    <string name="bottom_nav_delegated">Delegated</string>
</resources>