<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/White">

    <TextView
        android:id="@+id/email_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_prompt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_prompt2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/email_question"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />

    <!--<EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Grey"
        android:backgroundTint="@color/Grey"
        android:layout_below="@id/email_prompt"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        tools:targetApi="lollipop" />-->

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Grey"
        android:backgroundTint="@color/Grey"
        android:textColor="@color/black"
        android:hint="@string/enter_email"
        android:autofillHints="Email address"
        tools:targetApi="o"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up_button"
        android:textSize="14sp"
        android:textColor="@color/White"
        android:background="@drawable/register_next_button"
        android:onClick="signUp"/>

</RelativeLayout>