<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_delegation_progress">

    <RelativeLayout
        android:id="@+id/service_ground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/department_foreground"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:focusable="true">



        <TextView
            android:id="@+id/track_progress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/track_progress_string"
            android:drawableRight="@drawable/tick"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/Grey"
            android:layout_below="@id/track_progress_title"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:id="@+id/progress_info_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/view">

            <ImageView
                android:id="@+id/progress_info_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"/>

            <TextView
                android:id="@+id/progress_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toRightOf="@id/progress_info_icon"
                android:layout_marginTop="5dp"
                android:text="@string/progress_info_title"/>

            <TextView
                android:id="@+id/first_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="10"
                android:layout_marginTop="10dp"
                android:text="@string/progress_first_line"
                android:layout_below="@id/progress_info_title"/>

            <TextView
                android:id="@+id/second_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_line"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="10"
                android:text="@string/progress_second_line"/>

            <TextView
                android:id="@+id/third_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_line"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="10"
                android:text="@string/progress_third_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_service_initiation_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/progress_info_box"
            >

            <ImageView
                android:id="@+id/progress_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/progress"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"/>

            <TextView
                android:id="@+id/service_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toRightOf="@id/progress_icon"
                android:layout_marginTop="5dp"
                android:text="@string/progress_string"/>

            <RelativeLayout
                android:id="@+id/checkboxes_ground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:layout_marginTop="10dp"
                android:layout_below="@id/progress_icon">

                <ListView
                    android:id="@+id/progress_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/delegation_progress_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="100"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_below="@id/checkboxes_ground"
                android:layout_margin="15dp"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>