<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailedService"
    tools:showIn="@layout/activity_detailed_service"
    android:layout_marginBottom="65dp"
    android:id="@+id/nested_scrollview">

    <RelativeLayout
        android:id="@+id/detail_service_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/department_foreground"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:focusable="true">

        <TextView
            android:id="@+id/service_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_centerHorizontal="true"
            android:text="@string/service_description_title"/>

        <RelativeLayout
            android:id="@+id/service_description_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/service_description_title">

            <TextView
                android:id="@+id/service_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="Description of servce 1 because it is the first service displayed"
                android:layout_below="@id/payment_methods_list"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/documents_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_centerHorizontal="true"
            android:text="@string/servvice_documents_title_string"
            android:layout_below="@id/service_description_box"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_insert_drive_file_black_24dp"/>

        <RelativeLayout
            android:id="@+id/service_documents_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/documents_title">

            <TextView
                android:id="@+id/service_documents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/service_docs"
                android:layout_below="@id/payment_methods_list"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/cost_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_centerHorizontal="true"
            android:text="@string/service_cost_title_string"
            android:layout_below="@id/service_documents_box"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_money_on_black_24dp"/>

        <RelativeLayout
            android:id="@+id/service_cost_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/cost_title">

            <TextView
                android:id="@+id/service_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/cost"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/duration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_centerHorizontal="true"
            android:text="@string/service_duration_title"
            android:layout_below="@id/service_cost_box"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"/>

        <RelativeLayout
            android:id="@+id/service_duration_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/duration_title">

            <TextView
                android:id="@+id/service_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/duration"
                android:ellipsize="end"
                android:maxLines="10"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/processes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="@string/service_processes_title"
            android:layout_below="@id/service_duration_box"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_format_align_left_black_24dp"/>

        <RelativeLayout
            android:id="@+id/service_steps_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_ground"
            android:layout_below="@id/processes_title">

            <ListView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp">
            </ListView>

        </RelativeLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>